--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
-  "presets": [
-    "es2015",
-    "stage-0"
-  ],
-  "plugins": [
-    "transform-es2015-modules-commonjs"
-  ]
+  "presets": ["es2015"],
+  "plugins": ["transform-decorators-legacy"]
 }
